--- a/action.yaml
+++ b/action.yaml
@@ -13,7 +13,7 @@ runs:
   using: "composite"
   steps:
     - name: Set Greeting
-      run: echo "Hello $INPUT_WHO_TO_GREET."
+      run: echo "Goodbye $INPUT_WHO_TO_GREET."
       shell: bash
       env:
         INPUT_WHO_TO_GREET: ${{ inputs.name }}
